// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button demo -- button 1`] = `
.c12 {
  vertical-align: baseline;
}

.c24 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 22px;
  padding: 0 8px;
  color: #fff;
  border-color: #4683e6;
  border: none;
  background: linear-gradient(135deg,#5c8af7,#385ef5);
  box-shadow: 0 1px 5px 0 rgba(21,56,195,.12),0 2px 2px 0 rgba(8,155,140,0.24),0 3px 1px -3px rgba(58,96,245,.34);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c24:hover {
  color: #fff;
  border-color: #3664c8;
  background: linear-gradient(135deg,#5e95fb,#3a72f9);
  box-shadow: 0 1px 10px 0 rgba(21,56,195,.12),0 2px 4px -1px rgba(21,56,195,.2),0 4px 5px 0 rgba(21,56,195,.14);
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c11 {
  margin-right: 8px;
  font-size: 14px;
}

.c9 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c9 .c10 {
  color: #3555f6;
}

.c13 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c7 {
  position: relative;
  margin-bottom: -8px;
}

.c7 .c8,
.c7 .style__RadioTagWrap-sc-25j3mq-3 {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c7 .c8:last-child,
.c7 .style__RadioTagWrap-sc-25j3mq-3:last-child {
  margin-right: 0;
}

.c7 .c26 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c7 .c26:last-child {
  margin-right: 0;
}

.c7 .c27+.c27 {
  margin-left: -1px;
}

.c7 .c25 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c7 .c25:first-child {
  border-radius: 2px 0 0 2px;
}

.c7 .c25:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c16 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c18 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c21 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c23 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c14 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c14:hover {
  border-color: #3555f6;
}

.c14 .c20 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c14 .c22 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c14 .c15 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c14 .c17,
.c14 .c19 {
  line-height: 16px;
}

.c14 .c17 {
  padding-right: 20px;
}

.c14 .c19 {
  padding-left: 20px;
}

.c14 .c17 {
  display: none;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        styleType
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="c10 c11 uc-fe-icon icon__cbox-ed c12"
              type="cbox-ed"
            />
            primary
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="c10 c11 uc-fe-icon icon__circle c12"
              type="circle"
            />
            border
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="c10 c11 uc-fe-icon icon__circle c12"
              type="circle"
            />
            border-gray
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="c10 c11 uc-fe-icon icon__cbox-ed c12"
              type="cbox-ed"
            />
            sm
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="c10 c11 uc-fe-icon icon__circle c12"
              type="circle"
            />
            md
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="c10 c11 uc-fe-icon icon__circle c12"
              type="circle"
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        shape
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="c10 c11 uc-fe-icon icon__cbox-ed c12"
              type="cbox-ed"
            />
            undefined
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="c10 c11 uc-fe-icon icon__circle c12"
              type="circle"
            />
            circle
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        icon
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c7"
        >
          <div
            checked=""
            class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c9"
          >
            <i
              class="c10 c11 uc-fe-icon icon__cbox-ed c12"
              type="cbox-ed"
            />
            circle-fill
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="c10 c11 uc-fe-icon icon__circle c12"
              type="circle"
            />
            circle
          </div>
          <div
            class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c13"
          >
            <i
              class="c10 c11 uc-fe-icon icon__circle c12"
              type="circle"
            />
            loading
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        loading
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c14"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        disabled
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c14"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        fakeDisabled
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c14"
        >
          <div
            class="c15 c16"
          >
            <span
              class="c17 c18"
            >
              ON
            </span>
            <span
              class="c19 c18"
            >
              OFF
            </span>
            <span
              class="c20 c21"
            >
              <span
                class="c22 c23"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <button
    class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-primary c24"
    type="button"
  >
    <i
      class="uc-fe-button-icon uc-fe-icon icon__circle-fill c12"
      type="circle-fill"
    />
    Button
  </button>
</div>
`;

exports[`Button demo -- disabled 1`] = `
.c0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  background: #fff;
  border-color: #c3cad9;
  border: none;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c0:hover {
  color: #3555f6;
  background: #fff;
  border-color: #4683e6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

.c1 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  background: #fff;
  border-color: #c3cad9;
  border: none;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c1:hover {
  color: #3555f6;
  background: #fff;
  border-color: #4683e6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

.c1.c1 {
  border-color: #d9d9d9;
  background: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
  border-width: 1px;
  border-style: solid;
  box-shadow: none;
}

<div>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    Button
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border uc-fe-button-disabled c1"
    disabled=""
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Button demo -- fakeDisabled 1`] = `
.c0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  background: #fff;
  border-color: #c3cad9;
  border: none;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c0:hover {
  color: #3555f6;
  background: #fff;
  border-color: #4683e6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

.c1 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  background: #fff;
  border-color: #c3cad9;
  border: none;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c1:hover {
  color: #3555f6;
  background: #fff;
  border-color: #4683e6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

.c1.c1 {
  border-color: #d9d9d9;
  background: #f7f7f7;
  color: #bbb;
  cursor: not-allowed;
  border-width: 1px;
  border-style: solid;
  box-shadow: none;
}

<div>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    Button
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border uc-fe-button-disabled c1"
    disabled=""
    type="button"
  >
    Button
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border uc-fe-button-disabled uc-fe-button-disabled-fake c1"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Button demo -- icon 1`] = `
.c1 {
  vertical-align: baseline;
}

.c2 {
  vertical-align: baseline;
}

.c2.c2.c2 {
  -webkit-animation: iVXCSc 1.2s infinite linear;
  animation: iVXCSc 1.2s infinite linear;
  line-height: normal;
}

.c0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  background: #fff;
  border-color: #c3cad9;
  border: none;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c0:hover {
  color: #3555f6;
  background: #fff;
  border-color: #4683e6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

<div>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    <i
      class="uc-fe-button-icon uc-fe-icon icon__loading c1"
      type="loading"
    />
    Button
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    <i
      class="uc-fe-button-icon uc-fe-icon icon__link c1"
      type="link"
    />
    Button
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    <i
      class="uc-fe-button-icon uc-fe-icon icon__check c1"
      type="check"
    />
    Button
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    <i
      class="uc-fe-icon icon__loading uc-fe-icon-spin c2"
      type="loading"
    />
    Button
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    <i
      class="uc-fe-icon icon__link uc-fe-icon-spin c2"
      type="link"
    />
    Button
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    <i
      class="uc-fe-icon icon__check uc-fe-icon-spin c2"
      type="check"
    />
    Button
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    Button 
    <i
      class="uc-fe-icon icon__loading uc-fe-icon-spin c2"
      type="loading"
    />
     Button
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    Button 
    <i
      class="uc-fe-icon icon__link uc-fe-icon-spin c2"
      type="link"
    />
     Button
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c0"
    type="button"
  >
    Button 
    <i
      class="uc-fe-icon icon__check uc-fe-icon-spin c2"
      type="check"
    />
     Button
  </button>
</div>
`;

exports[`Button demo -- loading 1`] = `
.c1 {
  vertical-align: baseline;
}

.c1.c1.c1 {
  -webkit-animation: iVXCSc 1.2s infinite linear;
  animation: iVXCSc 1.2s infinite linear;
  line-height: normal;
}

.c0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  background: #fff;
  border-color: #c3cad9;
  border: none;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  position: relative;
  pointer-events: none;
}

.c0:hover {
  color: #3555f6;
  background: #fff;
  border-color: #4683e6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

.c0:before {
  position: absolute;
  top: -1px;
  left: -1px;
  bottom: -1px;
  right: -1px;
  background: white;
  opacity: 0.35;
  content: '';
  border-radius: inherit;
  z-index: 1;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
}

.c2 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #fff;
  border-color: #4683e6;
  border: none;
  background: linear-gradient(135deg,#5c8af7,#385ef5);
  box-shadow: 0 1px 5px 0 rgba(21,56,195,.12),0 2px 2px 0 rgba(8,155,140,0.24),0 3px 1px -3px rgba(58,96,245,.34);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  position: relative;
  pointer-events: none;
}

.c2:hover {
  color: #fff;
  border-color: #3664c8;
  background: linear-gradient(135deg,#5e95fb,#3a72f9);
  box-shadow: 0 1px 10px 0 rgba(21,56,195,.12),0 2px 4px -1px rgba(21,56,195,.2),0 4px 5px 0 rgba(21,56,195,.14);
}

.c2:before {
  position: absolute;
  top: -1px;
  left: -1px;
  bottom: -1px;
  right: -1px;
  background: white;
  opacity: 0.35;
  content: '';
  border-radius: inherit;
  z-index: 1;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
}

<div>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border uc-fe-button-loading c0"
    type="button"
  >
    <i
      class="uc-fe-button-icon uc-fe-icon icon__loading uc-fe-icon-spin c1"
      type="loading"
    />
    Button
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border uc-fe-button-loading c0"
    type="button"
  >
    <i
      class="uc-fe-button-icon uc-fe-icon icon__loading uc-fe-icon-spin c1"
      type="loading"
    />
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary uc-fe-button-loading c2"
    type="button"
  >
    <i
      class="uc-fe-button-icon uc-fe-icon icon__loading uc-fe-icon-spin c1"
      type="loading"
    />
  </button>
</div>
`;

exports[`Button demo -- shape 1`] = `
.c2 {
  vertical-align: baseline;
}

.c0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 32px;
  padding: 0 12px;
  color: #0a1633;
  background: #fff;
  border-color: #c3cad9;
  border: none;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  border-radius: 50% !important;
  padding: 0;
  overflow: hidden;
  width: 32px;
}

.c0:hover {
  color: #3555f6;
  background: #fff;
  border-color: #4683e6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

.c1 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 32px;
  padding: 0 12px;
  color: #fff;
  border-color: #4683e6;
  border: none;
  background: linear-gradient(135deg,#5c8af7,#385ef5);
  box-shadow: 0 1px 5px 0 rgba(21,56,195,.12),0 2px 2px 0 rgba(8,155,140,0.24),0 3px 1px -3px rgba(58,96,245,.34);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
  border-radius: 50% !important;
  padding: 0;
  overflow: hidden;
  width: 32px;
}

.c1:hover {
  color: #fff;
  border-color: #3664c8;
  background: linear-gradient(135deg,#5e95fb,#3a72f9);
  box-shadow: 0 1px 10px 0 rgba(21,56,195,.12),0 2px 4px -1px rgba(21,56,195,.2),0 4px 5px 0 rgba(21,56,195,.14);
}

<div>
  <button
    class="uc-fe-button uc-fe-button-size-lg uc-fe-button-styletype-border uc-fe-button-circle c0"
    shape="circle"
    type="button"
  >
    Button
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-lg uc-fe-button-styletype-primary uc-fe-button-circle c1"
    shape="circle"
    type="button"
  >
    <i
      class="uc-fe-button-icon uc-fe-icon icon__upload c2"
      type="upload"
    />
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-lg uc-fe-button-styletype-border uc-fe-button-circle c0"
    shape="circle"
    type="button"
  >
    <i
      class="uc-fe-button-icon uc-fe-icon icon__plus c2"
      type="plus"
    />
  </button>
</div>
`;

exports[`Button demo -- size 1`] = `
.c1 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  background: #fff;
  border-color: #c3cad9;
  border: none;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c1:hover {
  color: #3555f6;
  background: #fff;
  border-color: #4683e6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

.c0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 22px;
  padding: 0 8px;
  color: #0a1633;
  background: #fff;
  border-color: #c3cad9;
  border: none;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c0:hover {
  color: #3555f6;
  background: #fff;
  border-color: #4683e6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

.c2 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 32px;
  padding: 0 12px;
  color: #0a1633;
  background: #fff;
  border-color: #c3cad9;
  border: none;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c2:hover {
  color: #3555f6;
  background: #fff;
  border-color: #4683e6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

<div>
  <button
    class="uc-fe-button uc-fe-button-size-sm uc-fe-button-styletype-border c0"
    type="button"
  >
    Button
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c1"
    type="button"
  >
    Button
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-lg uc-fe-button-styletype-border c2"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Button demo -- styleType 1`] = `
.c1 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #0a1633;
  background: #fff;
  border-color: #c3cad9;
  border: none;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c1:hover {
  color: #3555f6;
  background: #fff;
  border-color: #4683e6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

.c0 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #fff;
  border-color: #4683e6;
  border: none;
  background: linear-gradient(135deg,#5c8af7,#385ef5);
  box-shadow: 0 1px 5px 0 rgba(21,56,195,.12),0 2px 2px 0 rgba(8,155,140,0.24),0 3px 1px -3px rgba(58,96,245,.34);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c0:hover {
  color: #fff;
  border-color: #3664c8;
  background: linear-gradient(135deg,#5e95fb,#3a72f9);
  box-shadow: 0 1px 10px 0 rgba(21,56,195,.12),0 2px 4px -1px rgba(21,56,195,.2),0 4px 5px 0 rgba(21,56,195,.14);
}

.c2 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  border-color: #c3cad9;
  -webkit-transition: all .16s cubic-bezier(.4,0,.2,1);
  transition: all .16s cubic-bezier(.4,0,.2,1);
  background: #fafafc;
}

.c2:hover {
  background: #fff;
  color: #3555f6;
  border-color: #3555f6;
}

<div>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c0"
    type="button"
  >
    Button
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c1"
    type="button"
  >
    Button
  </button>
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c2"
    type="button"
  >
    Button
  </button>
</div>
`;
